--- a/public/static/css/base.less.css
+++ b/public/static/css/base.less.css
@@ -1,413 +1,419 @@
-@theme-title-color: #F70;
-@theme-title-font: 'Cookie';
-@topmenu-height: 70px;
-@pf-page-border-color: #EEE;
+@topmenu-height: 92px;
+@pad: 15px;
+@max-row-width: 1040px;
 
-.theme-font (@font: @theme-title-font) {
-    font-family: @font;
-}
-
-.background-black-transparent () {
-    background:url(../img/black%20transparent.png);
-    background-size:100%;
-}
-
-.theme-title-font {
-    .theme-font;
-}
-.theme-title-color {
-    color:@theme-title-color;
-}
-
-.inpad {
-    padding:15px;
-}
-
+/*
+|----------------------------------------------------------------------------------
+| Common styles
+|----------------------------------------------------------------------------------
+*/
 body {
-background: url(../img/bgr.jpg) top center no-repeat #101620;
+    font-family: 'PT Sans', Helvetica, Arial, sans-serif;
 }
-::selection  {
-background:#DDF;
+
+.row {
+    clear:both;
+    max-width: @max-row-width;
+    margin: 0 auto;
 }
-.sitecontainer {
-display:block;
-margin:0;
-padding:0;
-width:100%;
-height:auto;
+
+.cool-font {
+    font-family: 'Lily Script One', cursive;
 }
-.pageheader {
-position:fixed;
-top:0;left:0;
-width:100%;
-z-index:9999;
-.background-black-transparent;
-box-shadow:0 2px 5px 1px #111;
+.proof-font {
+    font-family: 'PT Sans', sans-serif;
 }
-.pageheader_margin {
-display:block;
-padding-top:@topmenu-height;
+
+.separator {
+    display: block;
+    margin: 50px 0;
+    height: 16px;
+    background: url("http://mobileprovider.com.br/resources/img/separator.png") center top no-repeat transparent;
+    clear: both;
 }
-.sitecontent {
-padding-top:15px;
+
+#loading-site {
+    display:block;
+    position:fixed;
+    top:50%;
+    width:100%;
+    margin:auto;
+    text-align:center;
+    font-size:56px;
+    color:#333;
 }
-.pagewidth {
-width:950px;
-margin:auto;
+
+/*
+|----------------------------------------------------------------------------------
+| Header
+|----------------------------------------------------------------------------------
+*/
+#siteheader {
+    height: @topmenu-height;
+    background: url(../img/menu.png) repeat-x;
+    color:#FFF;
+    box-shadow:0 1px 10px 2px #999;
 }
-.pagepad {
-padding:10px;
+
+#sitelogo {
+    display: inline-block;
+    margin: 0;
+    padding: 0 10px;
+    line-height: @topmenu-height;
+    border-radius: 50%;
+    border: 2px solid #000;
+    background: #FFF;
+    color: #333;
+    .cool-font;
+    font-size: 52px;
+    font-weight: bold;
+    float:left;
 }
-.mylogo {
-display:block;
-margin:0;padding:0;
-margin-top:-5px;
-height:@topmenu-height;
-color:#EEE;
-.theme-font;
-font-size:34px;
-font-weight:bold;
-text-shadow:0 2px 5px #000;
-line-height:@topmenu-height;
-}
-.codeitem {
-color:@theme-title-color;
-font-size:36px;
-line-height:@topmenu-height;
-}
-.mylogoname {
-}
-.impactwords {
-display:block;
-padding:10px 0 30px;
-color:#FFF;
-.theme-font;
-text-align:center;
-text-shadow:0 2px 5px #000;
-}
-.impactsupport {
-margin:auto;
-margin-bottom:10px;
-padding:0px 0;
-z-index:99;
+#sitelogo2 {
+    display:inline-block;
+    height:@topmenu-height;
+    
+    & > img {
+        transition:all .25s;
+        height: (@topmenu-height - 60px);
+        margin-top:30px;
+    }
+    
+    &:hover > img, &:focus > img {
+        -webkit-transform: scale(1.05) rotateX(360deg) rotateZ(-5deg);
+        transform: scale(1.05) rotateX(360deg) rotateZ(-5deg);
+    }
 }
 
 #topmenu {
-display:block;
-margin:0;padding:0;
-list-style:none;
-}
-#topmenu > li {
-display:inline-block;
-}
-#topmenu > li > a {
-display:block;
-width:100px;
-color:#CCC;
-.theme-font;
-font-size:22px;
-text-align:center;
-text-decoration:none;
-line-height:@topmenu-height;
-text-shadow:1px 1px 1px #000;
-}
-#topmenu > li > a:hover, #topmenu > li > a:focus {
-color:#FFF;
-background:#202020;
-box-shadow: 0 0 0 2px #222;
-background:url(../img/menubg-over.png);
-background-size: 100% @topmenu-height;
-}
-
-.current_topmenu > a,
-.current_topmenu > a:hover,
-.current_topmenu > a:focus {
-box-shadow: 0 0 0 2px #111;
-background:url(../img/menubg.png);
-background-size: 100% @topmenu-height;
-color:#FFF !important;
-}
-
-
-
-.sidebar {
-min-height:300px;
-}
-.side-pad {
-padding:0;
-}
-.sideheader {
-margin-bottom:5px;
-padding:5px 0;
-border-bottom:1px solid #202020;
-background:#000;
-color:#FFF;
-.theme-font;
-font-size:28px;
-text-align:center;
-}
-.skill-list {
-background:#111;
-box-shadow:0 0 2px 0 #000;
-color:#999;
-margin-bottom:10px;
-}
-.skill-title {
-display:block;
-color:@theme-title-color;
-text-align:right;
-font-weight:bold;
-}
-.skill-item > .skill-progress > .progress {
-height:14px;
-}
-.skill-progress {
-float:right;
-width:75%;
-padding-top:8px;
-}
-.skill-name {
-float:left;
-width:23%;
-color:#FFF;
-font-weight:bold;
-line-height:30px;
-text-align:right;
-}
-
-
-.bodycontent {
-min-height:500px;
-margin:0;
-padding-bottom:15px;
-}
-.bodytitle {
-margin-bottom:20px;
-text-align:center;
-}
-.bodytitle h1 {
-margin:0;
-color:#EEF;
-font-size:32px;
-line-height:40px;
-text-shadow:1px 1px 1px #000;
-}
-
-
-
-.abt-text {
-font-size:13px;
-text-align:justify;
-}
-
-
-
-
-
-
-/**======================================================
- * Início
- *=======================================================
- */
-
-#myresume {
-color:#ddd;
-}
-#myresume p {
-font-size:14px;
-color:#BBB;
-}
-#myresume h4 {
-color:@theme-title-color;
-.theme-font;
-font-size:32px;
-}
-#mytopresume {
-padding:15px;
-background:#f7f7ff;
-background:url(../img/White-Gradient-Squares-Seamless-Patterns-For-Website-Backgrounds.jpg);
-border:5px solid #FFF;
-border-radius:5px;
-color:#333;
-}
-#mytopresume h4 {
-color:#000;
-}
-#mytopresume p {
-color:#333;
-}
-#myuniversities {
-list-style:none;
-margin:0;
-}
-#myuniversities > li {
-width:50%;
-float:left;
-}
-#myuniversities h5 {
-font-size:18px;
-color:#FFF;
-}
-#myuniversities p {
-
-}
-
-
-#pagefooter {
-display:block;
-background: url(../img/footer-bgr-tile.jpg) left top repeat-x;
-}
-#pagefooter_inner {
-padding-top:20px;
-background: url(../img/footer-bgr-img.jpg) center bottom no-repeat;
-min-height:280px;
-color:#777;
-}
-#pagefooter_inner h3 {
-margin:10px 0;
-.theme-font;
-font-size:32px;
-color:#BBB;
-}
-
-
-
-
-
-
-/**======================================================
- * Portfolio
- *=======================================================
- */
-#portfolio-items {
-    padding-top:15px;
-}
-
-.portfolio-item {
-    margin-bottom:15px;
-    padding:15px;
-    cursor:default;
-    .background-black-transparent;
-    box-shadow:0 0 3px 2px #000;
-}
-.portfolio-hover {
-    &:hover {
-        cursor:pointer;
-        background:#000;
-        box-shadow: 0 0 3px 2px #333;
+    float:right;
+    .proof-font;
+    
+    ul {
+        display:block;
+        list-style:none;
+        
+        li {
+            float:left;
+            height: @topmenu-height;
+            
+            .current_menu_state () {
+                color: #999;
+                text-decoration: none;
+            }
+            
+            &.current_menu > a, &.current_menu > a:hover, &.current_menu > a:focus {
+                .current_menu_state;
+            }
+            
+            a {
+                display: block;
+                padding: 0 20px;
+                color: #FFF;
+                font-size: 17px;
+                font-weight:normal;
+                line-height: @topmenu-height;
+                transition: color .25s;
+                
+                &:hover, &:focus {
+                    .current_menu_state;
+                }
+            }
+        }
     }
 }
 
-.pf-img .img-thumbnail {
-    width:100%;
-    min-height:250px;
+/*
+|----------------------------------------------------------------------------------
+| Body
+|----------------------------------------------------------------------------------
+*/
+#sitecontainer {
+    -webkit-opacity: 0;
+       -moz-opacity: 0;
+            opacity: 0;
 }
 
-.portfolio-item h2, .portfolio-item h1 {
+#sitecontent {
+    padding-top: @pad;
+    background: url(../img/presentation-bg.png) center top no-repeat;
+    //min-height:600px;
+}
+
+.thumbs {
+    display: block;
     margin:0;
     padding:0;
-    line-height:1em;
-    color:@theme-title-color;
-    .theme-font;
-    font-size:64px;
+    list-style:none;
+    
+    & > li {
+        @twidth: 30%;
+        display:block;
+        padding:4px;
+        margin:0 2.5% 2.5% 0;
+        padding:0;
+        
+        float: left;
+        width: @twidth;
+        
+        background: #FFF;
+        border-radius: 4px;
+        box-shadow:0 1px 5px #CCC;
+        
+        transition: all .25s linear;
+        
+        &:hover, &:focus {
+            -webkit-transform: scale(1.05);
+                    transform: scale(1.05);
+            a:after {
+                display:block;
+            }
+        }
+        
+        &:nth-child(3n+1) {
+            margin-left:2.5%;
+        }
+        &:nth-child(3n) {
+            margin-right:0;
+        }
+        
+        & > a {
+            display: block;
+            margin:5px;
+            text-decoration:none;
+            
+            position:relative;
+            
+            &:after {
+                content:'';
+                position:absolute;
+                bottom:.5px;
+                right:5px;
+                width:25px;
+                height:38px;
+                background:url('http://tubebox.org/public/images/pt/slider-arrow-right.png') left top 100%;
+                display:none;
+            }
+            
+            & > img {
+                display:block;
+                border-radius:4px;
+                border:1px solid #DDD;
+                width:100%;
+                //height: 210px;
+                
+            }
+            
+            .thumb-description {
+                padding-top:5px;
+                
+                h4 {
+                    margin:0;
+                    padding-bottom:1px;
+                    color:#666;
+                    font-size:16px;
+                    font-weight:bold;
+                }
+                
+                p {
+                    color:#999;
+                    font-size:16px;
+                }
+            }
+            
+        }
+    }
+    
 }
 
-.pf-status {
-    margin:3px 0 15px;
-}
 
-.pf-desc {
-    color:#EEE;
-    font-size:18px;
-}
-
-.pf-menu {
-    margin:-15px;
+/*
+|----------------------------------------------------------------------------------
+| Footer
+|----------------------------------------------------------------------------------
+*/
+#sitefooter {
+    display:block;
     margin-top:15px;
-    padding:5px;
-    border-top:2px solid #111;
-}
-
-
-.sp-content {
-    margin-top:-15px;
-    margin-bottom:15px;
-    background:#FFF;
-    min-height:500px;
-    box-shadow: 0 0 3px 2px #000;
-    border-bottom:15px solid #000;
+    padding:40px 0;
+    background:url(../img/bg-grey.png) #EEE;
+    box-shadow:inset 0 2px 2px #DDD;
+    color:#888;
     font-size:16px;
 }
 
-.sp-page {
-    margin-bottom: 15px;
-    padding-bottom:80px;
-    background: url("http://mobileprovider.com.br/resources/img/separator.png") center bottom no-repeat transparent;
-    background-size: 100% 12px;
-    max-width: 644px;
-}
-.sp-page-content {
-    margin-left:30px;
-}
 
-.sp-title {
-    .theme-title-font;
-    .theme-title-color;
-    text-shadow:1px 1px #000;
-    font-size:64px;
-}
+/*
+|----------------------------------------------------------------------------------
+| CUSTOM
+|----------------------------------------------------------------------------------
+*/
 
-
-
-
-
-.content_separator {
-    display:block;
-    margin:100px 0 30px;
-    height:16px;
-    background: url("http://mobileprovider.com.br/resources/img/separator.png") center top no-repeat transparent;
-    background-size:100% 12px;
-    clear:both;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// http://bradsknutson.com/blog/css3-rollover-social-media-icons/
-.social-slide (@url) {
-    display:block;
-	background-image: url(@url);
-	height: 48px;
-	width: 48px;
-	margin: 10px;
-	float: left;
-	-webkit-transition: all ease 0.3s;
-	-moz-transition: all ease 0.3s;
-	-o-transition: all ease 0.3s;
-	-ms-transition: all ease 0.3s;
-	transition: all ease 0.3s;
+#sitepresentation {
+    font-size: 16px;
+    cursor:default;
+    margin-bottom:@pad;
     
-    &:hover {
-        cursor:pointer;
-        background-position: 0px -48px;
-        box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.8);
+    .home-badge {
+        margin-top:-@pad;
+        background:url(../img/home-badges-bg.png) center top no-repeat transparent;
+        background-size:100% 100%;
+        letter-spacing:2px;
+        margin-bottom:@pad;
+        padding:(@pad*2);
+        padding-bottom:(@pad*4);
+        min-height:370px;
+        
+        &:hover p {
+            color:#FFF;
+        }
+    }
+    
+    h2 {
+        display:block;
+        margin:-@pad;
+        margin-bottom:10px;
+        padding:@pad;
+        padding-bottom:(@pad*2);
+        .proof-font;
+        text-align:center;
+        //border-bottom:1px solid #999;
+        font-size:48px;
+        //background:#222;
+        background:url(../img/home-badges-title-bg.png) center top no-repeat transparent;
+        background-size:100% 100%;
+        color:#FFF;
+    }
+    
+    p {
+        text-align: center;
+        font-size: 18px;
+        color: #CCC;
     }
 }
 
-.social-slide-facebook {
-    .social-slide('http://bradsknutson.com/wp-content/themes/bradsknutson/images/facebook-hover.png');
+.ptitle {
+    display:block;
+    margin:0;
+    margin-bottom:45px;
+    padding:15px;
+    color:#555;
+    font-size:22px;
+    text-align:center;
 }
-.social-slide-linkedin {
-    .social-slide('http://bradsknutson.com/wp-content/themes/bradsknutson/images/linkedin-hover.png');
+
+
+
+
+
+/*
+|----------------------------------------------------------------------------------
+| PORTFOLIO
+|----------------------------------------------------------------------------------
+*/
+#portfolio-project {
+    margin-top:-@pad;
+    background:#FFF;
+    //padding:(@pad*2) @pad;
+    padding-bottom:0;
+}
+
+#project-header {
+    background: url("http://mobileprovider.com.br/resources/img/separator.png") center bottom no-repeat transparent;
+    padding:(@pad*2) 0;
+    margin-bottom:-1px;
+    
+    h1 {
+        font-size:50px;
+    }
+    h4 {
+        font-size:24px;
+        color:#999;
+    }
+    p {
+        font-size:16px;
+        color:#666;
+        line-height:1.7em;
+    }
+}
+
+.feature-list {
+    @ibg: #F7F7F7;
+    background:#FFF;
+    //border:1px solid @ibg;
+    border:5px solid #eee;
+    border-radius:5px;
+    margin-bottom:15px;
+    
+    & > h5 {
+        display:block;
+        padding:5px;
+        padding-bottom:10px;
+        margin:0;
+        font-weight:bold;
+        font-size:15px;
+        background: #eee;
+        margin-bottom:5px;
+    }
+    
+    & > ul {
+        margin:5px;
+        padding:0;
+        list-style:none;
+        
+        & > li {
+            padding:3px 5px;
+            background:@ibg;
+            margin-bottom:5px;
+            font-size:13px;
+        }
+    }
+}
+
+.page-grey {
+    background:url(../img/bg-grey.png) #EEE;
+    padding:@pad;
+    padding-bottom: (@pad*2);
+    box-shadow: inset 0 3px 5px 0 #E0E0E0;
+}
+.page-white {
+    background:#FFF;
+    padding:@pad;
+    padding-bottom: (@pad*2);
+    box-shadow: inset 0 3px 5px 0 #E0E0E0;
+}
+
+
+
+
+
+
+
+
+
+.great-box-container {
+    background:#FFF;
+    box-shadow:0 0 3px 2px #DDD;
+    background:#F7F7F7;
+    border:1px solid #AAA;
+    border-radius:5px;
+    overflow:hidden;
+    margin-bottom:@pad;
+    
+    & > .gb-title {
+        @gbbg: #222;
+        display:block;
+        margin:0;
+        margin-bottom:@pad;
+        padding:@pad;
+        background:@gbbg;
+        font-size:18px;
+        font-weight:normal;
+        text-align:center;
+        color:#FFF;
+        border-bottom:1px solid (@gbbg - #111);
+    }
+    & > .gb-content {
+        padding:0;
+    }
 }
